--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Maxim - Modern One Page Bootstrap Template</title>
+	<title>Recycled Love</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -37,7 +37,7 @@
 							<li><a title="works" href="#works">Trabajos</a></li>
 							<li><a title="blog" href="#blog">Blog</a></li>
 							<li><a title="contact" href="#contact">Contacto</a></li>
-							<li><a href="page.html">Page</a></li>
+							<li><a href="page.html">Otros</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -84,11 +84,12 @@
 			<div class="row">
 				<div class="span6 alignright flyLeft">
 					<blockquote class="large">
-						There's huge space beetween creativity and imagination <cite>Mark Simmons, Nett Media</cite>
+						La grandeza de una nación y su progreso moral puede ser juzgado por la forma en que sus animales son tratados <cite>Mahatma Gandhi</cite>
 					</blockquote>
 				</div>
 				<div class="span6 aligncenter flyRight">
-					<i class="icon-coffee icon-10x"></i>
+					<i class="icon fas fa-dog icon-10x"></i>
+					<img src="img/mascota2.png" alt="" />
 				</div>
 			</div>
 		</div>
@@ -97,14 +98,13 @@
 	<!-- section: team -->
 	<section id="about" class="section">
 		<div class="container">
-			<h4>Who We Are</h4>
+			<h4>Quienes somos</h4>
 			<div class="row">
 				<div class="span4 offset1">
 					<div>
-						<h2>We live with <strong>creativity</strong></h2>
+						<h2>Vivimos en equilibrio <strong>amor, creatividad, reciclaje</strong></h2>
 						<p>
-							Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules. Omnicos directe
-							al desirabilite de un nov lingua franca: On refusa continuar payar custosi traductores.
+							Recycled love es una compañía dedicada a la creación de camas, tasas para alimento y agua y accesorios para los peludos de la casa totalmente reciclados, el propósito principal de la creación de esta pequeña empresa es facilitar los implementos necesarios para los perritos con precios accesibles y fabricados con materiales reciclados ya que en los últimos años se ha realizado una mayor concientización sobre el cuidado del planeta y las personas buscan nuevos productos que ayuden con la causa.
 						</p>
 					</div>
 				</div>
@@ -118,7 +118,7 @@
 				<div class="span2 offset1 flyIn">
 					<div class="people">
 						<img class="team-thumb img-circle" src="img/team/img-1.jpg" alt="" />
-						<h3>John Doe</h3>
+						<h3>Luciana Bonilla Segura</h3>
 						<p>
 							Art director
 						</p>
@@ -127,16 +127,16 @@
 				<div class="span2 flyIn">
 					<div class="people">
 						<img class="team-thumb img-circle" src="img/team/img-2.jpg" alt="" />
-						<h3>Mike Doe</h3>
+						<h3>Luis Fernando Cerdas López</h3>
 						<p>
-							Web developer
+							Digital imaging
 						</p>
 					</div>
 				</div>
 				<div class="span2 flyIn">
 					<div class="people">
 						<img class="team-thumb img-circle" src="img/team/img-3.jpg" alt="" />
-						<h3>Neil Doe</h3>
+						<h3>Emily Quesada Ruiz</h3>
 						<p>
 							Web designer
 						</p>
@@ -145,7 +145,7 @@
 				<div class="span2 flyIn">
 					<div class="people">
 						<img class="team-thumb img-circle" src="img/team/img-4.jpg" alt="" />
-						<h3>Mark Joe</h3>
+						<h3>Kimberly Ramírez Ugalde</h3>
 						<p>
 							UI designer
 						</p>
@@ -154,9 +154,9 @@
 				<div class="span2 flyIn">
 					<div class="people">
 						<img class="team-thumb img-circle" src="img/team/img-5.jpg" alt="" />
-						<h3>Stephen B</h3>
+						<h3>Jean Carlo Solano Gamboa</h3>
 						<p>
-							Digital imaging
+							Web developer
 						</p>
 					</div>
 				</div>
