--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 						<img class="team-thumb img-circle" src="img/team/img-1.jpg" alt="" />
 						<h3>Luciana Bonilla Segura</h3>
 						<p>
-							Art director
+							Directora ejecutiva
 						</p>
 					</div>
 				</div>
@@ -129,7 +129,7 @@
 						<img class="team-thumb img-circle" src="img/team/img-2.jpg" alt="" />
 						<h3>Luis Fernando Cerdas López</h3>
 						<p>
-							Digital imaging
+							Imagen digital
 						</p>
 					</div>
 				</div>
@@ -138,7 +138,7 @@
 						<img class="team-thumb img-circle" src="img/team/img-3.jpg" alt="" />
 						<h3>Emily Quesada Ruiz</h3>
 						<p>
-							Web designer
+							Diseñadora Web
 						</p>
 					</div>
 				</div>
@@ -147,7 +147,7 @@
 						<img class="team-thumb img-circle" src="img/team/img-4.jpg" alt="" />
 						<h3>Kimberly Ramírez Ugalde</h3>
 						<p>
-							UI designer
+							Diseñadora de interfase de usuario
 						</p>
 					</div>
 				</div>
@@ -156,7 +156,7 @@
 						<img class="team-thumb img-circle" src="img/team/img-5.jpg" alt="" />
 						<h3>Jean Carlo Solano Gamboa</h3>
 						<p>
-							Web developer
+							Diseñador Web
 						</p>
 					</div>
 				</div>
