--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 						<img class="team-thumb img-circle" src="img/team/img-2.jpg" alt="" />
 						<h3>Luis Fernando Cerdas López</h3>
 						<p>
-							Imagen digital
+							Directora de ventas
 						</p>
 					</div>
 				</div>
@@ -138,7 +138,7 @@
 						<img class="team-thumb img-circle" src="img/team/img-3.jpg" alt="" />
 						<h3>Emily Quesada Ruiz</h3>
 						<p>
-							Diseñadora Web
+							Directora de Marketing
 						</p>
 					</div>
 				</div>
@@ -147,7 +147,7 @@
 						<img class="team-thumb img-circle" src="img/team/img-4.jpg" alt="" />
 						<h3>Kimberly Ramírez Ugalde</h3>
 						<p>
-							Diseñadora de interfase de usuario
+							Directora finanzas
 						</p>
 					</div>
 				</div>
