--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 						<img class="team-thumb img-circle" src="img/team/img-5.jpg" alt="" />
 						<h3>Jean Carlo Solano Gamboa</h3>
 						<p>
-							Diseñador Web
+							Director Web
 						</p>
 					</div>
 				</div>
@@ -168,7 +168,7 @@
 	<!-- section: services -->
 	<section id="services" class="section orange">
 		<div class="container">
-			<h4>Services</h4>
+			<h4>Diseños</h4>
 			<!-- Four columns -->
 			<div class="row">
 				<div class="span3 animated-fast flyIn">
