--- a/index.html
+++ b/index.html
@@ -173,37 +173,37 @@
 			<div class="row">
 				<div class="span3 animated-fast flyIn">
 					<div class="service-box">
-						<img src="img/icons/laptop.png" alt="" />
-						<h2>Web design</h2>
+						<img src="img/icons/camas.png" alt="" />
+						<h2>Camas para mascotas</h2>
 						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+							La comodidad de su amado peludo es nuestra prioridad, le ofrecemos diveros diseños amoldados a su mascota.
 						</p>
 					</div>
 				</div>
 				<div class="span3 animated flyIn">
 					<div class="service-box">
-						<img src="img/icons/lab.png" alt="" />
-						<h2>Web development</h2>
+						<img src="img/icons/llaveros.png" alt="" />
+						<h2>Llaveros para mascota</h2>
 						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+							Porque la seguridad de su mascota es importante, tenemos llaveros con su nombre y un número de teléfono.
 						</p>
 					</div>
 				</div>
 				<div class="span3 animated-fast flyIn">
 					<div class="service-box">
-						<img src="img/icons/camera.png" alt="" />
-						<h2>Photography</h2>
+						<img src="img/icons/tazas.png" alt="" />
+						<h2>Tazas Alimentos</h2>
 						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+							Tenemos tazas para los peludos de la casa, porque darles el cuidado y amor es nuestra meta.
 						</p>
 					</div>
 				</div>
 				<div class="span3 animated-slow flyIn">
 					<div class="service-box">
-						<img src="img/icons/basket.png" alt="" />
-						<h2>Ecommerce</h2>
+						<img src="img/icons/gatos.png" alt="" />
+						<h2>Los mininos</h2>
 						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+							Recuerda que también tenemos articulos para los felinos del hogar.
 						</p>
 					</div>
 				</div>
