--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<nav class="pull-right nav-collapse collapse">
 						<ul id="menu-main" class="nav">
 							<li><a title="team" href="#about">Nosotros</a></li>
-							<li><a title="services" href="#services">Servicios</a></li>
+							<li><a title="services" href="#services">Productos</a></li>
 							<li><a title="works" href="#works">Trabajos</a></li>
 							<li><a title="blog" href="#blog">Blog</a></li>
 							<li><a title="contact" href="#contact">Contacto</a></li>
@@ -168,7 +168,7 @@
 	<!-- section: services -->
 	<section id="services" class="section orange">
 		<div class="container">
-			<h4>Diseños</h4>
+			<h4>Nuestros productos</h4>
 			<!-- Four columns -->
 			<div class="row">
 				<div class="span3 animated-fast flyIn">
