--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 				<div class="span3 animated flyIn">
 					<div class="service-box">
 						<img src="img/icons/llaveros.png" alt="" />
-						<h2>Llaveros para mascota</h2>
+						<h2>Placas para mascota</h2>
 						<p>
 							Porque la seguridad de su mascota es importante, tenemos llaveros con su nombre y un número de teléfono.
 						</p>
