--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 					</blockquote>
 				</div>
 				<div class="span6 aligncenter flyRight">
-					<i class="icon fas fa-dog icon-10x"></i>
-					<img src="img/mascota2.png" alt="" />
+					<img src="img/icons/mascota2.png" alt="Icono mascotas" />
 				</div>
 			</div>
 		</div>
