--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					</blockquote>
 				</div>
 				<div class="span6 aligncenter flyRight">
-					<img src="img/icons/mascotas.png" alt="Icono mascotas" />
+					<img src="img/icons/mascotas.png" alt="" />
 				</div>
 			</div>
 		</div>
