--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			<div class="row">
 				<div class="span4 offset1">
 					<div>
-						<h2>Vivimos en equilibrio <strong>amor, creatividad, reciclaje</strong></h2>
+						<h2>Vivimos en equilibrio: <strong>Amor + creatividad + reciclaje</strong></h2>
 						<p>
 							Recycled love es una compañía dedicada a la creación de camas, tasas para alimento y agua y accesorios para los peludos de la casa totalmente reciclados, el propósito principal de la creación de esta pequeña empresa es facilitar los implementos necesarios para los perritos con precios accesibles y fabricados con materiales reciclados ya que en los últimos años se ha realizado una mayor concientización sobre el cuidado del planeta y las personas buscan nuevos productos que ayuden con la causa.
 						</p>
