--- a/index.html
+++ b/index.html
@@ -213,34 +213,29 @@
 	<!-- section: works -->
 	<section id="works" class="section">
 		<div class="container clearfix">
-			<h4>Our Works</h4>
+			<h4>Nuestro trabajo</h4>
 			<!-- portfolio filter -->
 			<div class="row">
 				<div id="filters" class="span12">
 					<ul class="clearfix">
 						<li>
 							<a href="#" data-filter="*" class="active">
-								<h5>All</h5>
+								<h5>Todos</h5>
 							</a>
 						</li>
 						<li>
 							<a href="#" data-filter=".web">
-								<h5>Web</h5>
+								<h5>Camas</h5>
 							</a>
 						</li>
 						<li>
 							<a href="#" data-filter=".print">
-								<h5>Print</h5>
+								<h5>Tazas</h5>
 							</a>
 						</li>
 						<li>
 							<a href="#" data-filter=".design">
-								<h5>Design</h5>
-							</a>
-						</li>
-						<li>
-							<a href="#" data-filter=".photography">
-								<h5>Photography</h5>
+								<h5>Placas</h5>
 							</a>
 						</li>
 					</ul>
