--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 						<img src="img/works/1.png" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
-								<h5>Portfolio name</h5>
+								<h5>Diseños de camas</h5>
 								<i class="icon-plus icon-2x"></i>
 							</div>
 						</div>
@@ -321,7 +321,7 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid photography web">
+						<div class="portfolio-item grid print design web">
 							<div class="portfolio">
 								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/6.png" alt="" />
@@ -336,7 +336,7 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid photography web">
+						<div class="portfolio-item grid print design web">
 							<div class="portfolio">
 								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/7.png" alt="" />
@@ -351,7 +351,7 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid photography">
+						<div class="portfolio-item grid print design web">
 							<div class="portfolio">
 								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/8.png" alt="" />
@@ -366,25 +366,10 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid photography web">
+						<div class="portfolio-item grid print design web">
 							<div class="portfolio">
 								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/9.png" alt="" />
-						<div class="portfolio-overlay">
-							<div class="thumb-info">
-								<h5>Portfolio name</h5>
-								<i class="icon-plus icon-2x"></i>
-							</div>
-						</div>
-						</a>
-							</div>
-						</div>
-						<!-- end portfolio item -->
-						<!-- portfolio item -->
-						<div class="portfolio-item grid design web">
-							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/10.png" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
 								<h5>Portfolio name</h5>
