--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid photography web">
+						<div class="portfolio-item grid print photography">
 							<div class="portfolio">
 								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/4.png" alt="" />
@@ -306,7 +306,7 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid photography web">
+						<div class="portfolio-item grid print photography">
 							<div class="portfolio">
 								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/5.png" alt="" />
@@ -321,7 +321,7 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid print design web">
+						<div class="portfolio-item grid print photography">
 							<div class="portfolio">
 								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/6.png" alt="" />
