--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 	<!-- section: works -->
 	<section id="works" class="section">
 		<div class="container clearfix">
-			<h4>Nuestro trabajo</h4>
+			<h4>Our Works</h4>
 			<!-- portfolio filter -->
 			<div class="row">
 				<div id="filters" class="span12">
@@ -224,17 +224,17 @@
 							</a>
 						</li>
 						<li>
-							<a href="#" data-filter=".web">
+							<a href="#" data-filter=".print">
 								<h5>Camas</h5>
 							</a>
 						</li>
 						<li>
-							<a href="#" data-filter=".print">
+							<a href="#" data-filter=".design">
 								<h5>Tazas</h5>
 							</a>
 						</li>
 						<li>
-							<a href="#" data-filter=".design">
+							<a href="#" data-filter=".web">
 								<h5>Placas</h5>
 							</a>
 						</li>
@@ -246,13 +246,13 @@
 				<div class="span12">
 					<div id="portfolio-wrap">
 						<!-- portfolio item -->
-						<div class="portfolio-item grid print photography">
+						<div class="portfolio-item grid print">
 							<div class="portfolio">
 								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/1.png" alt="" />
+						<img src="img/works/1.jpeg" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
-								<h5>Diseños de camas</h5>
+								<h5>Camas</h5>
 								<i class="icon-plus icon-2x"></i>
 							</div>
 						</div>
@@ -261,13 +261,13 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid print design web">
+						<div class="portfolio-item grid print">
 							<div class="portfolio">
 								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/2.png" alt="" />
+						<img src="img/works/2.jpeg" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
-								<h5>Portfolio name</h5>
+								<h5>Camas</h5>
 								<i class="icon-plus icon-2x"></i>
 							</div>
 						</div>
@@ -276,13 +276,13 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid print design">
+						<div class="portfolio-item grid print">
 							<div class="portfolio">
 								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/3.png" alt="" />
+						<img src="img/works/3.jpeg" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
-								<h5>Portfolio name</h5>
+								<h5>Camas</h5>
 								<i class="icon-plus icon-2x"></i>
 							</div>
 						</div>
@@ -291,13 +291,13 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid print photography">
+						<div class="portfolio-item grid design">
 							<div class="portfolio">
 								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/4.png" alt="" />
+						<img src="img/works/4.jpeg" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
-								<h5>Portfolio name</h5>
+								<h5>Tazas</h5>
 								<i class="icon-plus icon-2x"></i>
 							</div>
 						</div>
@@ -306,13 +306,13 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid print photography">
+						<div class="portfolio-item grid design">
 							<div class="portfolio">
 								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/5.png" alt="" />
+						<img src="img/works/5.jpeg" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
-								<h5>Portfolio name</h5>
+								<h5>Tazas</h5>
 								<i class="icon-plus icon-2x"></i>
 							</div>
 						</div>
@@ -321,13 +321,13 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid print photography">
+						<div class="portfolio-item grid design">
 							<div class="portfolio">
 								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/6.png" alt="" />
+						<img src="img/works/6.jpeg" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
-								<h5>Portfolio name</h5>
+								<h5>Tazas</h5>
 								<i class="icon-plus icon-2x"></i>
 							</div>
 						</div>
@@ -336,13 +336,13 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid print design web">
+						<div class="portfolio-item grid photography web">
 							<div class="portfolio">
 								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/7.png" alt="" />
+						<img src="img/works/7.jpeg" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
-								<h5>Portfolio name</h5>
+								<h5>Placas</h5>
 								<i class="icon-plus icon-2x"></i>
 							</div>
 						</div>
@@ -351,13 +351,13 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid print design web">
+						<div class="portfolio-item grid photography web">
 							<div class="portfolio">
 								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/8.png" alt="" />
+						<img src="img/works/8.jpeg" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
-								<h5>Portfolio name</h5>
+								<h5>Placas</h5>
 								<i class="icon-plus icon-2x"></i>
 							</div>
 						</div>
@@ -366,13 +366,13 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid print design web">
+						<div class="portfolio-item grid photography web">
 							<div class="portfolio">
 								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/9.png" alt="" />
+						<img src="img/works/9.jpeg" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
-								<h5>Portfolio name</h5>
+								<h5>Placas</h5>
 								<i class="icon-plus icon-2x"></i>
 							</div>
 						</div>
