--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 	<!-- section: works -->
 	<section id="works" class="section">
 		<div class="container clearfix">
-			<h4>Our Works</h4>
+			<h4>Nuestro trabajo</h4>
 			<!-- portfolio filter -->
 			<div class="row">
 				<div id="filters" class="span12">
