--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 						<img class="team-thumb img-circle" src="img/team/img-2.jpg" alt="" />
 						<h3>Luis Fernando Cerdas López</h3>
 						<p>
-							Directora de ventas
+							Director de ventas
 						</p>
 					</div>
 				</div>
@@ -201,7 +201,7 @@
 						<img src="img/icons/gatos.png" alt="" />
 						<h2>Los mininos</h2>
 						<p>
-							Recuerda que también tenemos articulos para los felinos del hogar.
+							Recuerda que también tenemos artículos para los felinos del hogar.
 						</p>
 					</div>
 				</div>
