--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid print">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="img/works/1.jpeg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/1.jpeg" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
@@ -261,7 +261,7 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid print">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="img/works/2.jpeg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/2.jpeg" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
@@ -276,7 +276,7 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid print">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="img/works/3.jpeg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/3.jpeg" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
@@ -291,7 +291,7 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid design">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="img/works/4.jpeg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/4.jpeg" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
@@ -306,7 +306,7 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid design">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="img/works/5.jpeg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/5.jpeg" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
@@ -321,7 +321,7 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid design">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="img/works/6.jpeg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/6.jpeg" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
@@ -336,7 +336,7 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid photography web">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="img/works/7.jpeg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/7.jpeg" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
@@ -351,7 +351,7 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid photography web">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="img/works/8.jpeg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/8.jpeg" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
@@ -366,7 +366,7 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid photography web">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="img/works/9.jpeg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/9.jpeg" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
